# netsuke

./: .gitignore  .goreleaser.yaml  .markdownlint-cli2.jsonc  .yamllint  AGENTS.md  Cargo.toml  Makefile  README.md  build.rs  build_l10n_audit.rs  clippy.toml  dylint.toml  pyproject.toml  ruff.toml  rust-toolchain.toml  typos.local.toml  typos.toml
.github/: dependabot.yml  release-staging.toml
.github/workflows/: build-and-package.yml  ci.yml  coverage-main.yml  dependabot-automerge.yml  mutation-testing.yml  netsukefile-test.yml  release-dry-run.yml  release.yml
ambient_fs/: Cargo.toml
ambient_fs/src/: lib.rs
codex/: refactor-python-staging-scripts-into-github-action
cyclopts/: __init__.pyi
docs/: adr-001-replace-serde-yml-with-serde-saphyr.md  adr-002-replace-cucumber-with-rstest-bdd.md  adr-003-actions-foreach-when-scope.md  adr-003-agent-consistent-human-first-cli.md  adr-004-bound-kani-ir-harnesses-to-small-n.md  adr-004-explicit-config-selection-outside-orthoconfig.md  adr-004-graph-subcommand-in-process-rendering.md  adr-005-typed-which-resolve-error.md  adr-replace-serde-yml-with-serde-saphyr.md  adr-replace-serde-yml-with-serdy-saphyr.md  behavioural-testing-in-rust-with-cucumber.md  contents.md  developers-guide.md  documentation-style-guide.md  formal-verification-methods-in-netsuke.md  netsuke-cli-design-document.md  netsuke-design.md  ortho-config-users-guide.md  quickstart.md  repository-layout.md  roadmap.md  rstest-bdd-users-guide.md  rstest-bdd-v0-5-0-migration-guide.md  rust-doctest-dry-guide.md  rust-testing-with-rstest-fixtures.md  sample-netsuke.toml  security-network-command-audit.md  snapshot-testing-in-netsuke-using-insta.md  srgn.md  test-isolation-with-ninja-env.md  translators-guide.md  users-guide.md
docs/archive/: roadmap-completed-foundations.md
docs/execplans/: 3-10-1-guarantee-status-message-ordering.md  3-10-2-consistent-log-prefixes.md  3-10-3-json-diagnostics-mode.md  3-11-1-cli-config-struct-derived-with-ortho-config.md  3-11-1-cli-config-struct.md  3-11-2-discover-configuration-files-in-project-and-user-scopes.md  3-11-3-expose-config-path-and-netsuke-config.md  3-12-1-define-design-tokens.md  3-12-2-snapshot-progress-and-status-output-for-themes.md  3-13-1-smoke-tests-for-novice-flows.md  3-13-2-user-documentation-advanced-usage-chapter.md  3-13-3-provide-ci-focused-guidance.md  3-14-1-manifest-time-condition-semantics-for-actions-and-targets.md  3-14-2-top-level-flow-control-expansion.md  3-14-3-lower-target-and-action-deps.md  3-14-4-command-available-non-throwing-executable-probe.md  3-14-5-regression-coverage-for-conditional-action-dependency-manifests.md  3-4-5-extend-graph-subcommand-with-an-html-renderer.md  3-6-1-ensure-default-subcommand-builds-manifest-defaults.md  3-7-1-externalize-user-facing-strings.md  3-7-2-locale-resolution.md  3-7-3-translator-tooling-and-documentation.md  3-8-1-add-accessible-output-mode.md  3-8-2-respect-accessibility-preferences.md  3-9-1-integrate-indicatif-multi-progress.md  3-9-2-parse-ninja-status-lines-to-drive-task-progress.md  3-9-3-per-stage-timing-metrics.md  4-1-1-kani-tooling-and-local-smoke-targets.md  4-1-2-kani-smoke-ci-job.md  4-1-3-record-phase-1-scope-boundary-for-verus-and-stateright.md  4-2-1-kani-harnesses-for-manifest-to-ir-safety-checks.md  (+6 more)
examples/: basic_c.yml  book.yml  c_app.yml  photo_album.yml  photo_edit.yml  python_package.yml  svg_to_png.yml  visual_design.yml  website.yml  writing.yml
installer/: Package.wxs
ninja_env/: Cargo.toml
scripts/: _release_upload_deps.py  assert-file-absent.sh  assert-file-exists.sh  check-kani-version.sh  generate-release-help.sh  generate_typos_config.py  install-kani.sh  package-artefact.sh  package-artifact.sh  typos_rollout.py  typos_rollout_cache.py  typos_rollout_check.py  typos_rollout_http.py  upload_release_assets.py
src/: ast.rs  cli.rs  cli_l10n.rs  cli_localization.rs  cli_policy.rs  diagnostic_json.rs  diagnostic_json_tests.rs  diagnostics.rs  hasher.rs  host_pattern.rs  ir.rs  json_envelope.rs  lib.rs  locale_resolution.rs  main.rs  manifest.rs  ninja_gen.rs  ninja_gen_property_tests.rs  output_mode.rs  output_prefs.rs  output_prefs_tests.rs  result_json.rs  runner.rs  snapshot_test_support.rs  status.rs  status_pipeline.rs  status_tests.rs  status_timing.rs  status_timing_tests.rs  stdlib.rs  theme.rs  theme_tests.rs
test_support/: Cargo.toml
test_support/src/: check_ninja.rs  command_helper.rs  cwd_guard.rs  env.rs  env_guard.rs  env_lock.rs  env_var_guard.rs  error.rs  exec.rs  fluent.rs  fs.rs  hash.rs  http.rs  lib.rs  locale_stubs.rs  localizer.rs  manifest.rs  netsuke.rs  ninja.rs  ninja_gen.rs  path_guard.rs  stdlib_assert.rs  tracing_capture.rs
tests/: advanced_usage_tests.rs  assert_cmd_tests.rs  ast_tests.rs  bdd_tests.rs  cli.rs  cli_tests.rs  cli_world_tests.rs  command_escaping_tests.rs  compile_fail_tests.rs  cucumber.rs  dependabot_config_tests.rs  documentation_examples_e2e_tests.rs  documentation_examples_loader_tests.rs  documentation_examples_tests.rs  env_path_tests.rs  env_restore_tests.rs  hasher_tests.rs  ir_from_manifest_tests.rs  ir_tests.rs  kani_cfg_ui_tests.rs  locale_resolution_tests.rs  localization_tests.rs  logging_stderr_tests.rs  manifest_env_tests.rs  manifest_glob_tests.rs  manifest_jinja_tests.rs  ninja_env_tests.rs  ninja_gen_integration_tests.rs  ninja_gen_tests.rs  ninja_gen_unit_tests.rs  ninja_property_tests.rs  ninja_snapshot_tests.rs  novice_flow_smoke_tests.rs  path_guard_tests.rs  prover_tools_make_tests.rs  release_help_script_tests.rs  release_staging_tests.rs  runner_graph_tests.rs  runner_tests.rs  runner_tool_subcommands_tests.rs  (+9 more)
tests_python/: conftest.py  stage_test_helpers.py  test_normalise_windows_paths.py  test_read_manifest.py  test_release_modes.py  test_stage_action.py  test_stage_artefacts.py  test_stage_cli.py  test_stage_common.py  test_stage_common_config.py  test_stage_common_module.py  test_stage_common_staging.py  test_stage_config.py  test_stage_glob.py  test_stage_helpers.py  test_stage_integration.py  test_stage_output.py
(+414 files in other folders)
