[package]
name = "netsuke"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "build.rs",
]
license = "ISC"
description = "A YAML-powered Ninja/Jinja hybrid build system."

[features]
default = []
legacy-digests = ["sha1", "md5"]

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde-saphyr = "0.0.6"
minijinja = { version = "2.12.0", features = ["loader"] }
cap-std = { version = "3.4.4", features = ["fs_utf8"] }
camino = "1.2.0"
semver = { version = "1", features = ["serde"] }
anyhow = "1"
thiserror = "1"
miette = { version = "7.6.0", features = ["fancy"] }
digest = "0.10"
sha2 = "0.10"
sha1 = { version = "0.10", optional = true }
md5 = { package = "md-5", version = "0.10", optional = true }
itoa = "1"
itertools = "0.12"
indexmap = { version = "2.5", features = ["serde"] }
lru = "0.16"
glob = "0.3.3"
walkdir = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_json_canonicalizer = "0.3"
tempfile = "3.8.0"
ninja_env = { path = "ninja_env" }
shell-quote = { version = "0.7.2", default-features = false, features = ["sh"] }
shlex = "1.3.0"
time = { version = "0.3.44", features = ["formatting", "macros", "parsing", "serde"] }
ureq = { version = "2.10.5" }
wait-timeout = "0.2"
url = "^2.5.0"

[build-dependencies]
clap = { version = "4.5.0", features = ["derive"] }
clap_mangen = "0.2.29"
thiserror = "1"
time = { version = "0.3.44", features = ["formatting"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# 1. hygiene
allow_attributes                    = "deny"
allow_attributes_without_reason     = "deny"
blanket_clippy_restriction_lints    = "deny"
cognitive_complexity                = "deny"
needless_pass_by_value              = "deny"
implicit_hasher                     = "deny"

# 2. debugging leftovers
dbg_macro                           = "deny"
print_stdout                        = "deny"
print_stderr                        = "deny"

# 2. panic-prone operations
unwrap_used                         = "deny"
expect_used                         = "deny"
indexing_slicing                    = "deny"
string_slice                        = "deny"
integer_division                    = "deny"
integer_division_remainder_used     = "deny"
panic_in_result_fn                  = "deny"
unreachable                         = "deny"

# 4. portability
host_endian_bytes                   = "deny"
little_endian_bytes                 = "deny"
big_endian_bytes                    = "deny"

# 5. nursery idiom polish
let_underscore_must_use             = "deny"
or_fun_call                         = "deny"
option_if_let_else                  = "deny"
self_named_module_files             = "deny"
shadow_reuse                        = "deny"
shadow_same                         = "deny"
shadow_unrelated                    = "deny"
str_to_string                       = "deny"
string_lit_as_bytes                 = "deny"
try_err                             = "deny"
unneeded_field_pattern              = "deny"
use_self                            = "deny"

# 6. numerical foot-guns
float_arithmetic                    = "deny"
cast_possible_truncation            = "deny"
cast_possible_wrap                  = "deny"
cast_precision_loss                 = "deny"
lossy_float_literal                 = "deny"

# 7. API ergonomics
missing_const_for_fn                = "deny"
must_use_candidate                  = "deny"
unused_async                        = "deny"

# 8. Error handling
missing_panics_doc                  = "deny"
error_impl_error                    = "deny"
result_large_err                    = "deny"

[lints.rust]
unknown_lints                       = "deny"
renamed_and_removed_lints           = "deny"
missing_docs                        = "deny"

[lints.rustdoc]
missing_crate_level_docs            = "deny"
broken_intra_doc_links              = "deny"
private_intra_doc_links             = "deny"
bare_urls                           = "deny"
invalid_html_tags                   = "deny"
invalid_codeblock_attributes        = "deny"
unescaped_backticks                 = "deny"

[dev-dependencies]
rstest = "0.18.0"
rstest-bdd = "0.3.0"
rstest-bdd-macros = { version = "0.3.0", features = ["strict-compile-time-validation"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"], default-features = false }
insta = { version = "1", features = ["yaml"] }
assert_cmd = "2.0.0"
mockable = { version = "0.3", features = ["mock"] }
serial_test = "3"
mockall = "0.11"
camino = "1.2.0"
test_support = { path = "test_support" }
strip-ansi-escapes = "0.2"

# Target-specific dev-deps
[target.'cfg(unix)'.dev-dependencies]
# Used only to construct FIFOs and device nodes in tests.
rustix = { version = "1.0.8", features = ["fs"] }
