[package]
name = "test_support"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
publish = false

[dependencies]
tempfile = "3.8.0"
mockable = { version = "0.3", features = ["mock"] }
ninja_env = { path = "../ninja_env" }
camino = "1.2.0"
cap-std = { version = "3.4.4", features = ["fs_utf8"] }
sha2 = { version = "=0.10.8", default-features = false, features = ["std"] }
anyhow = "1"

[dev-dependencies]
rstest = "0.18.0"
